test/files/neg/t565.check
t565.scala:1: error: object creation impossible, since variable s0 is not defined
(Note that variables need to be initialized to be defined)
object test {
       ^
t565.scala:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var s0: String
      ^
two errors found
